# api/swagger/swagger.yaml
@@ -42,11 +42,19 @@ paths:
       security:
       - Oauth:
         - open
+      parameters:
+      - in: query
+        name: id
+        type: string
       responses:
         200:
           description: health information
           schema:
             $ref: '#/definitions/Status'
+        400:
+          description: bad request
+        410:
+          description: invalid service id
         default:
           $ref: '#/responses/Error'
 
